# c_cpp_project_framework

./: .gitignore  .gitmodules  CMakeLists.txt  Kconfig  LICENSE  README.md  README_ZH.md
.github/workflows/: test_build.yml
components/component1/: CMakeLists.txt  Kconfig
components/component1/include/: lib1.h
components/component1/src/: lib1.c
components/component2/: CMakeLists.txt  Kconfig
components/component2/include/: lib2.h
components/component2/src/: lib2.c
components/component3/: CMakeLists.txt  Kconfig
components/component3/include/: lib3.h
components/component3/src/: lib3.c
examples/demo1/: .gitignore  CMakeLists.txt  build.py  config.py  project.py
examples/demo1/compile/: priority.conf
examples/demo1/main/: CMakeLists.txt
examples/demo1/main/src/: main.c  test.c  test2.c
libs/: CMakeLists.txt
maixpy/: config.h.in
maixpy/src/: main.c
tools/: flash.py  run.py
tools/cmake/: compile.cmake  compile_flags.cmake  gen_binary.cmake  project.py  utils.py
tools/flash/: flash.py
tools/kconfig/: genconfig.py  update_build_info.py
